--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@ body {
   background-image: url("/assets/img/background.jpg");
   background-size: 100%;
   background-size: cover;
-  background-repeat: no-repeat;
+  // background-repeat: no-repeat;
 }
