--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
-<div style="position: fixed; top: 0; width: 100%;">
-  <!-- <p-menubar [model]="items"></p-menubar> -->
-  <div class="flex justify-content-between" >
+<div class="header" style="position: fixed; top: 0; width: 100%;">
+  <div class="flex justify-content-between header-content">
     <h3 style="padding-left: 35px; padding-top:25px; color: white; font-family: sans-serif;">Forex Trading</h3>
     <h3 style="padding-right: 75px; padding-top:25px; color: white; font-family: sans-serif;">Call Up: 1-800-321-3322</h3>
   </div>
