--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
   // background-repeat: no-repeat;
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
-  background-image: url("/assets/img/background.jpg");
+  background-image: url("/assets/img/sbackground.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center; /* Center the background image */
