--- a/src/app/display-user-data/display-user-data.component.html
+++ b/src/app/display-user-data/display-user-data.component.html
@@ -1,21 +1,20 @@
-
-  <div class="center">
-    <p-table [value]="users">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Phone Number</th>
-          <th>Email</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-user>
-        <tr>
-          <td>{{user.firstName}}</td>
-          <td>{{user.lastName}}</td>
-          <td>{{user.phone}}</td>
-          <td>{{user.email}}</td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
+<div class="center">
+  <p-table [value]="users" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,15]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Phone Number</th>
+        <th>Email</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-user>
+      <tr>
+        <td>{{user.name}}</td>
+        <td>{{user.surname}}</td>
+        <td>{{user.phone_number}}</td>
+        <td>{{user.email}}</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
