--- a/src/app/user-data-collection/user-data-collection.component.html
+++ b/src/app/user-data-collection/user-data-collection.component.html
@@ -13,15 +13,15 @@ padding-left: 35px; padding-right: 35px;">
   <form action="" [formGroup]="registerForm">
     <div class="formgrid grid">
       <div class="field col-12">
-        <input formControlName="firstName" pInputText id="firstName" type="text" class="w-full"
+        <input formControlName="name" pInputText id="name" type="text" class="w-full"
           placeholder="First Name">
       </div>
       <div class="field col-12">
 
-        <input formControlName="lastName" pInputText id="lastName" type="text" class="w-full" placeholder="Last Name">
+        <input formControlName="surname" pInputText id="surname" type="text" class="w-full" placeholder="Last Name">
       </div>
       <div class="field col-12">
-        <input formControlName="phone" pInputText id="phone" type="number" class="w-full" placeholder="Phone Number">
+        <input formControlName="phone_number" pInputText id="phone_number" type="number" class="w-full" placeholder="Phone Number">
         <!-- <p-inputNumber class="w-full"></p-inputNumber> -->
 
       </div>
@@ -38,3 +38,7 @@ padding-left: 35px; padding-right: 35px;">
     <!-- <button pButton pRipple type="button" label="Cancel" class="p-button-raised p-button-warning" (click)="onReset()"></button> -->
   </div>
 </div>
+
+
+
+<p-toast position="bottom-right"></p-toast>
